NII cloud operationさん謹製ツールの run-throughが動作できるところまでいろいろ修正 しかし、結局なにが有効になって効きだしたのかさっぱりわからない 参考URL https://hub.docker.com/r/mnagaku/lc-minimal-notebook
ただし、下記発見
https://hub.docker.com/r/mnagaku/lc-minimal-notebook/dockerfile

--- a/base-notebook/Dockerfile
+++ b/base-notebook/Dockerfile
@@ -124,7 +124,7 @@ COPY start-singleuser.sh /usr/local/bin/
 COPY jupyter_notebook_config.py /etc/jupyter/
 RUN fix-permissions /etc/jupyter/
 
-RUN echo "${NB_USER} ALL=NOPASSWD: ALL" >> /etc/sudoers && visudo -c
+RUN echo "${NB_USER} ALL=NOPASSWD: ALL" >> /etc/sudoers.d/${NB_USER} && chmod 0440 /etc/sudoers.d/${NB_USER} && visudo -c
 
 # Switch back to jovyan to avoid accidental container runs as root
 USER $NB_UID
